move `MaxPowerLevel` into a sub folder
Preperation for adding a unit testing project.

--- a/MaxPowerLevel/MaxPowerLevel.csproj
+++ b/MaxPowerLevel/MaxPowerLevel.csproj
@@ -11,6 +11,6 @@
     <PackageReference Include="IdentityModel" Version="3.10.10"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Destiny2\Destiny2.csproj"/>
+    <ProjectReference Include="..\..\Destiny2\Destiny2.csproj"/>
   </ItemGroup>
 </Project>
