change `Destiny2` to a submodule pulling from GitHub

--- a/MaxPowerLevel.Test/MaxPowerLevel.Test.csproj
+++ b/MaxPowerLevel.Test/MaxPowerLevel.Test.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MaxPowerLevel\MaxPowerLevel.csproj" />
-    <ProjectReference Include="..\..\Destiny2\Destiny2.csproj" />
+    <ProjectReference Include="..\Destiny2\Destiny2.csproj" />
   </ItemGroup>
 
 </Project>
