don't hardcode the base url everywhere

--- a/MaxPowerLevel/appsettings.json
+++ b/MaxPowerLevel/appsettings.json
@@ -5,5 +5,10 @@
     }
   },
   "AllowedHosts": "*",
-  "BungieLoginCookieName": "BungieLogin"
+  "Bungie": {
+    "LoginCookieName": "BungieLogin",
+    "BaseUrl": "https://www.bungie.net/",
+    "AuthorizationEndpoint": "https://www.bungie.net/en/oauth/authorize",
+    "TokenEndpoint": "https://www.bungie.net/platform/app/oauth/token/"
+  }
 }
