--- a/MaxPowerLevel/appsettings.json
+++ b/MaxPowerLevel/appsettings.json
@@ -1,7 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "System": "Warning",
+      "Microsoft": "Warning"
     }
   },
   "AllowedHosts": "*",
