--- a/MaxPowerLevel.Test/MaxPowerLevel.Test.csproj
+++ b/MaxPowerLevel.Test/MaxPowerLevel.Test.csproj
@@ -1,20 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
+    <PackageReference Include="MSTest.TestAdapter" Version="1.3.2"/>
+    <PackageReference Include="MSTest.TestFramework" Version="1.3.2"/>
+    <PackageReference Include="Destiny2" Version="1.0.1"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\MaxPowerLevel\MaxPowerLevel.csproj" />
-    <ProjectReference Include="..\Destiny2\Destiny2.csproj" />
+    <ProjectReference Include="..\MaxPowerLevel\MaxPowerLevel.csproj"/>
   </ItemGroup>
-
 </Project>
