upgrade to the latest version of Destiny2

--- a/MaxPowerLevel/appsettings.json
+++ b/MaxPowerLevel/appsettings.json
@@ -12,5 +12,7 @@
     "BaseUrl": "https://www.bungie.net/",
     "AuthorizationEndpoint": "https://www.bungie.net/en/oauth/authorize",
     "TokenEndpoint": "https://www.bungie.net/platform/app/oauth/token/"
-  }
+  },
+  "AppName": "Destiny 2 Utilities",
+  "AppVersion": "1.0"
 }
