--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   backend:
     build: .
+    restart: always
     expose:
       - "80"
       - "443"
@@ -16,6 +17,7 @@ services:
     depends_on:
       - backend
     image: nginx
+    restart: always
     ports:
       - "80:80"
       - "443:443"
