--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,6 +1,25 @@
 server {
     listen        80;
     server_name   destiny2utils.com *.destiny2utils.com;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen      443 ssl;
+    server_name destiny2utils.com *.destiny2utils.com
+
+    ssl_certificate /etc/letsencrypt/live/destiny2utils.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/destiny2utils.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl_dhparam.pem;
+
     location / {
         proxy_pass         http://backend;
         proxy_http_version 1.1;
