--- a/MaxPowerLevel/MaxPowerLevel.csproj
+++ b/MaxPowerLevel/MaxPowerLevel.csproj
@@ -5,9 +5,12 @@
     <UserSecretsId>ed64c0be-3d6b-4283-b887-4dcb9de6293a</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
-    <PackageReference Include="Humanizer" Version="2.6.2"/>
-    <PackageReference Include="Destiny2" Version="1.4.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.App">
+      <PrivateAssets Condition="'%(PackageReference.Version)' == ''">all</PrivateAssets>
+      <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Humanizer" Version="2.6.2" />
+    <PackageReference Include="Destiny2" Version="1.4.1" />
   </ItemGroup>
 </Project>
