serve the site at www.destiny2utils.com as well as destiny2utils.com

--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen        80;
-    server_name   destiny2utils.com;
+    server_name   destiny2utils.com www.destiny2utils.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -13,7 +13,7 @@ server {
 
 server {
     listen      443 ssl;
-    server_name destiny2utils.com;
+    server_name destiny2utils.com www.destiny2utils.com;
 
     ssl_certificate /etc/letsencrypt/live/destiny2utils.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/destiny2utils.com/privkey.pem;
