--- a/MaxPowerLevel/MaxPowerLevel.csproj
+++ b/MaxPowerLevel/MaxPowerLevel.csproj
@@ -6,5 +6,6 @@
   <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.7.9" />
     <PackageReference Include="Destiny2" Version="1.4.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
   </ItemGroup>
 </Project>
