--- a/MaxPowerLevel/MaxPowerLevel.csproj
+++ b/MaxPowerLevel/MaxPowerLevel.csproj
@@ -4,7 +4,8 @@
     <UserSecretsId>ed64c0be-3d6b-4283-b887-4dcb9de6293a</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Humanizer" Version="2.7.9" />
-    <PackageReference Include="Destiny2" Version="1.5.1" />
+    <PackageReference Include="Humanizer" Version="2.7.9"/>
+    <PackageReference Include="Destiny2" Version="1.5.1"/>
+    <PackageReference Include="Fractions" Version="4.0.1"/>
   </ItemGroup>
 </Project>
