--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -6,14 +6,24 @@ server {
         root /var/www/certbot;
     }
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    return 301 https://destiny2utils.com$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name www.destiny2utils.com;
+
+    ssl_certificate /etc/letsencrypt/live/destiny2utils.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/destiny2utils.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    return 301 https://destiny2utils.com$request_uri;
 }
 
 server {
     listen      443 ssl;
-    server_name destiny2utils.com www.destiny2utils.com;
+    server_name destiny2utils.com;
 
     ssl_certificate /etc/letsencrypt/live/destiny2utils.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/destiny2utils.com/privkey.pem;
@@ -21,7 +31,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass         http://backend;
+        proxy_pass         http://backend/;
         proxy_http_version 1.1;
         proxy_set_header   Upgrade $http_upgrade;
         proxy_set_header   Connection keep-alive;
