include any vendors dropping at level engrams

--- a/MaxPowerLevel/MaxPowerLevel.csproj
+++ b/MaxPowerLevel/MaxPowerLevel.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.7.9"/>
-    <PackageReference Include="Destiny2" Version="1.6.0"/>
+    <PackageReference Include="Destiny2" Version="1.7.0"/>
     <PackageReference Include="Fractions" Version="4.0.1"/>
+    <PackageReference Include="VendorEngrams" Version="1.0.0"/>
   </ItemGroup>
 </Project>
