--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = MaxPowerLevel/Views/bulma
 	url = git@github.com:jgthms/bulma.git
 	branch = 0.9.2
+[submodule "MaxPowerLevel/Views/bulmaswatch"]
+	path = MaxPowerLevel/Views/bulmaswatch
+	url = https://github.com/jenil/bulmaswatch.git
